--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
           <li><a href="edit.php">Home</a></li>
           <li><a href="help.html">Contact Us</a></li>
           <li><a href="about.html">About</a></li>
-
+          <li><a href="login.php">Login</a></li>
         </ul>
       </div>
     </nav>
