--- a/about.html
+++ b/about.html
@@ -12,6 +12,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+<script>  
+
+    $(document).ready(function(){
+      $('.parallax').parallax();
+    });
+$(document).ready(function(){
+    $('.materialboxed').materialbox();
+
+        $(document).ready(function(){
+      $('.slider').slider();
+    });
+        
+  });
+
+</script>
+
+
 
 </head>
 
@@ -22,14 +39,34 @@
       <div class="nav-wrapper teal accent-4">
         <a href="edit.php" class="brand-logo center">Warble</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="edit.php">Home</a></li>
+
           <li><a href="help.html">Contact Us</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="login.php">Login</a></li>
+          <li><a href="login.php">Log In</a></li>
 
         </ul>
+
       </div>
     </nav>
+
+      <div class="slider ">
+    <ul class="slides ">
+      <li>
+        <img src="img/bird.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h1>Warble</h1>
+          <h5 class="light grey-text text-lighten-3">(of a bird) sing softly and with a succession of constantly changing notes</h5>
+        </div>
+      </li>
+      <li>
+        <img src="img/bird.jpg"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Revolutionary Way of Communicating</h3>
+          <h5 class="light grey-text text-lighten-3">Share your ideas with yourself</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
+
 
 <h1><center>We love to <b class="orange-text">Design</b> <b>&</b> <b class="orange-text">Innovate</b><b>.</b></center></h1>
 
@@ -72,6 +109,9 @@
 </div>
 
 
+
+
+
 <div class="section scrollspy" id="work">
     <div class="container">
   <h3 class="center header text_h3"> Meet the <b class="orange-text"><u>creative minds</u></b> behind <b>Warble</b>, but most importantly, the people revolutionized social networking.</h3>
@@ -109,6 +149,12 @@
         </div>
     </div>
 </div>
+  </div>
+
+
+
+
+
 
 <footer class="page-footer teal accent-4">
           <div class="container">
