--- a/about.html
+++ b/about.html
@@ -28,25 +28,35 @@ $(document).ready(function(){
 
 </script>
 
+    <style>
+.fixed {
+  position: fixed;
+  z-index: 5;
+}
 
+    </style>
 
 </head>
 
 <body style="background-color:rgba(249,249,249,1);">
 
 
-    <nav>
+    <nav class ="fixed">
       <div class="nav-wrapper teal accent-4">
         <a href="edit.php" class="brand-logo center">Warble</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
 
+      <li><a href="faq.html">FAQ</a></li>
           <li><a href="help.html">Contact Us</a></li>
+
           <li><a href="login.php">Log In</a></li>
 
         </ul>
 
       </div>
     </nav>
+
+    <br></br>
 
       <div class="slider ">
     <ul class="slides ">
@@ -127,7 +137,9 @@ $(document).ready(function(){
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Developer <i class="mdi-navigation-close right"></i></span>
-                        <p>Co-Developer of Warble. </p>
+                        <p>I am not smart. I just wear glasses. Knowledge is like underwear. It is useful to have it, but not necessary to show it off.
+I am Jealous of My Parents... I will never have a kid as cool as theirs!
+I need 6 months of vacation, twice a year. </p>
                     </div>
                 </div>
             </div>
@@ -142,7 +154,9 @@ $(document).ready(function(){
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Developer<i class="mdi-navigation-close right"></i></span>
-                        <p>Co-Developer of Warble.</p>
+                        <p>My opinions may have changed, but not the fact that I am right.
+I am not crazy, my reality is just different than yours.
+I always learn from mistakes of others who take my advice. Spreading smiles like they are herpes.</p>
                     </div>
                 </div>
             </div>
@@ -166,7 +180,7 @@ $(document).ready(function(){
           </div>
           <div class="footer-copyright">
             <div class="container center">
-            © 2017 Warble, All rights reserved.
+            &#169 2017 Warble, All rights reserved.
             </div>
           </div>
         </footer>
